feat(CommentController): added swagger documentation to CommentController
